# Video.Telemetry.Protobuf

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json
docs/: Architecture.md
public/PiSubmarine/Video/Telemetry/Protobuf/: Deserializer.h  ErrorCode.h  Serializer.h
src/: CMakeLists.txt
src/PiSubmarine/Video/Telemetry/Protobuf/: Deserializer.cpp  ErrorCode.cpp  Serializer.cpp  Video.proto
test/: CMakeLists.txt
test/PiSubmarine/Video/Telemetry/Protobuf/: DeserializerTest.cpp  ErrorCodeTest.cpp  SerializerTest.cpp
